--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="icon" type="image/png" sizes="16x16" href="./src/assets/images/favicon/favicon-16x16.png">
 </head>
 
-<body>
+<body class="bg-whitesmoke">
   <div id="root"></div>
   <script type="module" src="/src/main.jsx"></script>
 </body>
